# car1

./: .gitignore  README.md  run.sh  start_trace.sh
trace_energy_ws/: .gitignore  README.md  go.sh  start_pidtest_visual.sh  start_trace_energy.sh
trace_energy_ws/src/pidtest/: CMakeLists.txt  package.xml
trace_energy_ws/src/pidtest/launch/: pidtest_full_tune.launch.py  pidtest_visual.launch.py
trace_energy_ws/src/pidtest/src/: pidtest_node.cpp
trace_energy_ws/src/servo_controller/: package.xml  setup.cfg  setup.py
trace_energy_ws/src/servo_controller/servo_controller/: servo_uart_node.py
trace_energy_ws/src/servo_message/: CMakeLists.txt  package.xml
trace_energy_ws/src/servo_message/msg/: ServoMessage.idl  ServoMessage.msg
trace_energy_ws/src/simple_track/: CMakeLists.txt  package.xml
trace_energy_ws/src/simple_track/launch/: stm32_simple_track.launch.py  stm32_simple_track_full.launch.py
trace_energy_ws/src/simple_track/src/: simple_blob_vision.cpp  simple_pd_servo.cpp
trace_energy_ws/src/trace_energy/: CMakeLists.txt  package.xml
trace_energy_ws/src/trace_energy/launch/: energy_control.launch.py  trace_start.launch.py
trace_energy_ws/src/trace_energy/scripts/: hsv_range_tuner_gui.py  tracking_debug_echo.py
trace_energy_ws/src/trace_energy/src/: aim_control_panel.cpp  energy_control.cpp  image_subscriber.cpp  processed_image_preview.cpp  read_image.cpp  trace_calculator.cpp
trace_energy_ws/tools/: SERVO_TEST_CHECKLIST.md  aim_command_smoke_test.py  capture_trace_debug_snapshots.py  diagnose_servo_chain.sh  hsv_threshold_tuner_gui.py  repair_servo_message_and_build.sh  run_aim_command_smoke_test.sh  run_search_smoke_test.sh  run_servo_sweep.sh  run_with_ros2_python.sh  search_mode_synthetic_test.py  servo_orbit_test.py  servo_race_sequence_test.py  servo_yaw_pitch_sweep_test.py  verify_all.sh  view_trace_debug_image.sh
调试参数/: offline_trace.py  requirements.txt  运行说明.txt
调试参数/调试参数日志/: offline_trace_params_20260412_184148.txt  offline_trace_params_20260412_184201.txt  offline_trace_params_20260412_184202.txt  offline_trace_params_20260412_184414.txt
