<?xml version="1.0"?>
<package format="3">
  <name>stm32_simple_track</name>
  <version>0.0.1</version>
  <description>STM32/OpenMV style simple blob tracking + PD servo control.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>servo_message</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>servo_controller</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

